--- a/momentum/package.json
+++ b/momentum/package.json
@@ -5,11 +5,17 @@
   "main": "src/index.js",
   "scripts": {
     "style": "sass --watch src/sass/style.scss css/style.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "author": "LuFtKrabbe",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^4.11.1"
   }
 }
